--- a/questions/question11.html
+++ b/questions/question11.html
@@ -20,13 +20,13 @@
     </header>
     <main>
         <div class="question-container">
-            <p class="question-text">What is the acceleration due to gravity on Earth?</p>
+            <p class="question-text">What are the SI units for speed?</p>
             <form id="answer-form">
                 <label for="user-answer">Your Answer:</label>
                 <input type="text" id="user-answer" name="user-answer" required>
                 <button type="submit">Submit</button>
             </form>
-            <p id="feedback" style="display: none;">Correct Answer: 9.8 m/s²</p>
+            <p id="feedback" style="display: none;">Correct Answer: meters per second</p>
         </div>
     </main>
     <a href="../jeopardy.html" class="button" onclick="returnToMain()">Return to Main Menu</a>
