--- a/questions/question12.html
+++ b/questions/question12.html
@@ -20,13 +20,13 @@
     </header>
     <main>
         <div class="question-container">
-            <p class="question-text">What is the value of Planck's constant?</p>
+            <p class="question-text">What is the SI unit for force?</p>
             <form id="answer-form">
                 <label for="user-answer">Your Answer:</label>
                 <input type="text" id="user-answer" name="user-answer" required>
                 <button type="submit">Submit</button>
             </form>
-            <p id="feedback" style="display: none;">Correct Answer: 6.626 × 10⁻³⁴ J·s</p>
+            <p id="feedback" style="display: none;">Correct Answer: Newtons = kg * m/s^2</p>
         </div>
     </main>
     <a href="../jeopardy.html" class="button" onclick="returnToMain()">Return to Main Menu</a>
