--- a/questions/question13.html
+++ b/questions/question13.html
@@ -20,13 +20,13 @@
     </header>
     <main>
         <div class="question-container">
-            <p class="question-text">What is the charge of an electron?</p>
+            <p class="question-text">What is the equation for Newton's Second Law?</p>
             <form id="answer-form">
                 <label for="user-answer">Your Answer:</label>
                 <input type="text" id="user-answer" name="user-answer" required>
                 <button type="submit">Submit</button>
             </form>
-            <p id="feedback" style="display: none;">Correct Answer: -1.602 × 10⁻¹⁹ C</p>
+            <p id="feedback" style="display: none;">Correct Answer: Force equals Mass times acceleration</p>
         </div>
     </main>
     <a href="../jeopardy.html" class="button" onclick="returnToMain()">Return to Main Menu</a>
