--- a/questions/question14.html
+++ b/questions/question14.html
@@ -20,13 +20,15 @@
     </header>
     <main>
         <div class="question-container">
-            <p class="question-text">What is the boiling point of water at sea level?</p>
+            <p class="question-text">What two things affect the kinetic energy of an object?</p>
             <form id="answer-form">
                 <label for="user-answer">Your Answer:</label>
                 <input type="text" id="user-answer" name="user-answer" required>
                 <button type="submit">Submit</button>
             </form>
-            <p id="feedback" style="display: none;">Correct Answer: 100°C</p>
+            <p id="feedback" style="display: none;">Correct answer: Speed and mass
+
+            </p>
         </div>
     </main>
     <a href="../jeopardy.html" class="button" onclick="returnToMain()">Return to Main Menu</a>
