--- a/questions/question18.html
+++ b/questions/question18.html
@@ -20,13 +20,13 @@
     </header>
     <main>
         <div class="question-container">
-            <p class="question-text">What is the first law of thermodynamics?</p>
+            <p class="question-text">You hit a ball with a bat. The ball flies forward. What pushes back on the bat?</p>
             <form id="answer-form">
                 <label for="user-answer">Your Answer:</label>
                 <input type="text" id="user-answer" name="user-answer" required>
                 <button type="submit">Submit</button>
             </form>
-            <p id="feedback" style="display: none;">Correct Answer: Energy cannot be created or destroyed, only transformed.</p>
+            <p id="feedback" style="display: none;">Correct Answer: The Ball</p>
         </div>
     </main>
     <script>
