--- a/questions/question20.html
+++ b/questions/question20.html
@@ -20,13 +20,13 @@
     </header>
     <main>
         <div class="question-container">
-            <p class="question-text">What is the formula for Ohm's Law?</p>
+            <p class="question-text">What happens to sound in space where there's no air?</p>
             <form id="answer-form">
                 <label for="user-answer">Your Answer:</label>
                 <input type="text" id="user-answer" name="user-answer" required>
                 <button type="submit">Submit</button>
             </form>
-            <p id="feedback" style="display: none;">Correct Answer: V = IR</p>
+            <p id="feedback" style="display: none;">Correct Answer: It cannot travel</p>
         </div>
     </main>
     <script>
