--- a/questions/question22.html
+++ b/questions/question22.html
@@ -20,13 +20,13 @@
     </header>
     <main>
         <div class="question-container">
-            <p class="question-text">What is the speed of sound in air at room temperature?</p>
+            <p class="question-text">You are pulling a sled on snow, but it’s hard to move. You add wheels, and now it’s much easier. Why did it get easier to pull?</p>
             <form id="answer-form">
                 <label for="user-answer">Your Answer:</label>
                 <input type="text" id="user-answer" name="user-answer" required>
                 <button type="submit">Submit</button>
             </form>
-            <p id="feedback" style="display: none;">Correct Answer: 343 m/s</p>
+            <p id="feedback" style="display: none;">Correct Answer: Wheels reduce the force of friction</p>
         </div>
     </main>
     <a href="../jeopardy.html" class="button" onclick="returnToMain()">Return to Main Menu</a>
