--- a/questions/question3.html
+++ b/questions/question3.html
@@ -20,13 +20,13 @@
     </header>
     <main>
         <div class="question-container">
-            <p class="question-text">What is Newton's second law of motion?</p>
+            <p class="question-text">Newton’s First Law says objects in motion stay in motion unless what happens?</p>
             <form id="answer-form">
                 <label for="user-answer">Your Answer:</label>
                 <input type="text" id="user-answer" name="user-answer" required>
                 <button type="submit">Submit</button>
             </form>
-            <p id="feedback" style="display: none;">Correct Answer: F = ma</p>
+            <p id="feedback" style="display: none;">Correct Answer: A force acts on them</p>
         </div>
     </main>
     <a href="../jeopardy.html" class="button" onclick="returnToMain()">Return to Main Menu</a>
