--- a/questions/question6.html
+++ b/questions/question6.html
@@ -20,13 +20,13 @@
     </header>
     <main>
         <div class="question-container">
-            <p class="question-text">What is the SI unit of force?</p>
+            <p class="question-text">If a car travels 60 miles in 2 hours, what is its speed?</p>
             <form id="answer-form">
                 <label for="user-answer">Your Answer:</label>
                 <input type="text" id="user-answer" name="user-answer" required>
                 <button type="submit">Submit</button>
             </form>
-            <p id="feedback" style="display: none;">Correct Answer: Newton</p>
+            <p id="feedback" style="display: none;">Correct Answer: 30 mph</p>
         </div>
     </main>
     <script>
