--- a/waves.html
+++ b/waves.html
@@ -33,12 +33,14 @@
         </section>
 
         <section id="force">            
-        <iframe width="420" height="315" src="https://www.youtube.com/watch?v=gdGyvGPZ1G0">what is Sound?</iframe>
-        <iframe width="420" height="315" src="https://www.youtube.com/watch?v=TgJKf3G6LuE">Sound Waves In Action</iframe>
-        <iframe width="420" height="315" src="https://www.youtube.com/watch?v=aCu4VRKMstA">Intro to Waves (Longitudinal and Transverse Waves)</iframe>
-        <iframe width="420" height="315" src="https://www.youtube.com/watch?v=Uz9EiYMthL8">Longitudinal and Transverse Waves</iframe>
-        <iframe width="420" height="315" src="https://www.youtube.com/watch?v=7v2gs8rdQzU">Electromagnetic Waves</iframe>
-        <iframe width="420" height="315" src="https://www.youtube.com/watch?v=m2mxVWrVP58">Sound song</iframe>
+            <ul>
+                <li><a href="https://www.youtube.com/watch?v=gdGyvGPZ1G0" target="_blank">What is Sound?</a></li>
+                <li><a href="https://www.youtube.com/watch?v=TgJKf3G6LuE" target="_blank">Sound Waves In Action</a></li>
+                <li><a href="https://www.youtube.com/watch?v=aCu4VRKMstA" target="_blank">Intro to Waves (Longitudinal and Transverse Waves)</a></li>
+                <li><a href="https://www.youtube.com/watch?v=Uz9EiYMthL8" target="_blank">Longitudinal and Transverse Waves</a></li>
+                <li><a href="https://www.youtube.com/watch?v=7v2gs8rdQzU" target="_blank">Electromagnetic Waves</a></li>
+                <li><a href="https://www.youtube.com/watch?v=m2mxVWrVP58" target="_blank">Sound Song</a></li>
+            </ul>
         </section>
       
  
