--- a/electricity.html
+++ b/electricity.html
@@ -33,8 +33,10 @@
         </section>
 
         <section id="force">            
-        <iframe width="420" height="315" src="youtu.be/yc2-363MIQs">Electricity</iframe>
-        <iframe width="420" height="315" src="www.youtube.com/watch?v=yXCeuSiTOug">Magnetism</iframe>
+            <ul>
+                <li><a href="https://youtu.be/yc2-363MIQs" target="_blank">Electricity</a></li>
+                <li><a href="https://www.youtube.com/watch?v=yXCeuSiTOug" target="_blank">Magnetism</a></li>
+            </ul>
         </section>
       
  
