--- a/energy.html
+++ b/energy.html
@@ -33,9 +33,11 @@
         </section>
 
         <section id="force">            
-        <iframe width="420" height="315" src="www.youtube.com/watch?v=Q0LBegPWzrg">Energy Animation Video</iframe>
-        <iframe width="420" height="315" src="www.youtube.com/watch?v=rkZZjM6Oiw8">What is Energy?</iframe>
-        <iframe width="420" height="315" src="www.youtube.com/watch?v=St2q6oGO6xo">Kinetic and Potential Energy Song</iframe>
+            <ul>
+                <li><a href="https://www.youtube.com/watch?v=Q0LBegPWzrg" target="_blank">Energy Animation Video</a></li>
+                <li><a href="https://www.youtube.com/watch?v=rkZZjM6Oiw8" target="_blank">What is Energy?</a></li>
+                <li><a href="https://www.youtube.com/watch?v=St2q6oGO6xo" target="_blank">Kinetic and Potential Energy Song</a></li>
+            </ul>
         </section>
       
  
