--- a/questions/question1.html
+++ b/questions/question1.html
@@ -20,13 +20,13 @@
     </header>
     <main>
         <div class="question-container">
-            <p class="question-text">What is the speed of light in a vacuum?</p>
+            <p class="question-text">What is the word for how fast something is moving?</p>
             <form id="answer-form">
                 <label for="user-answer">Your Answer:</label>
                 <input type="text" id="user-answer" name="user-answer" required>
                 <button type="submit">Submit</button>
             </form>
-            <p id="feedback" style="display: none;">Correct Answer: 299,792,458 m/s</p>
+            <p id="feedback" style="display: none;">Correct Answer: Speed</p>
         </div>
     </main>
     <script>
