--- a/questions/question15.html
+++ b/questions/question15.html
@@ -20,13 +20,13 @@
     </header>
     <main>
         <div class="question-container">
-            <p class="question-text">What is the formula for kinetic energy?</p>
+            <p class="question-text">What do we call how high or low a sound is?</p>
             <form id="answer-form">
                 <label for="user-answer">Your Answer:</label>
                 <input type="text" id="user-answer" name="user-answer" required>
                 <button type="submit">Submit</button>
             </form>
-            <p id="feedback" style="display: none;">Correct Answer: KE = 1/2 mv²</p>
+            <p id="feedback" style="display: none;">Correct Answer: Pitch</p>
         </div>
     </main>
     <script>
