--- a/questions/question17.html
+++ b/questions/question17.html
@@ -20,13 +20,13 @@
     </header>
     <main>
         <div class="question-container">
-            <p class="question-text">What is the speed of light in a vacuum?</p>
+            <p class="question-text">What Force slows things down when they are sliding?</p>
             <form id="answer-form">
                 <label for="user-answer">Your Answer:</label>
                 <input type="text" id="user-answer" name="user-answer" required>
                 <button type="submit">Submit</button>
             </form>
-            <p id="feedback" style="display: none;">Correct Answer: 3 × 10⁸ m/s</p>
+            <p id="feedback" style="display: none;">Correct Answer: Friction</p>
         </div>
     </main>
     <a href="../jeopardy.html" class="button" onclick="returnToMain()">Return to Main Menu</a>
