--- a/questions/question21.html
+++ b/questions/question21.html
@@ -20,13 +20,13 @@
     </header>
     <main>
         <div class="question-container">
-            <p class="question-text">What is the speed of sound in air at room temperature?</p>
+            <p class="question-text">A bike moves at 4 meters per second, how long does it take to travel 28 meters</p>
             <form id="answer-form">
                 <label for="user-answer">Your Answer:</label>
                 <input type="text" id="user-answer" name="user-answer" required>
                 <button type="submit">Submit</button>
             </form>
-            <p id="feedback" style="display: none;">Correct Answer: 343 m/s</p>
+            <p id="feedback" style="display: none;">Correct Answer: 7 seconds</p>
         </div>
     </main>
     <a href="../jeopardy.html" class="button" onclick="returnToMain()">Return to Main Menu</a>
