--- a/questions/question7.html
+++ b/questions/question7.html
@@ -20,13 +20,13 @@
     </header>
     <main>
         <div class="question-container">
-            <p class="question-text">What is the formula for Ohm's Law?</p>
+            <p class="question-text"> What force pulls objects towards the Earth</p>
             <form id="answer-form">
                 <label for="user-answer">Your Answer:</label>
                 <input type="text" id="user-answer" name="user-answer" required>
                 <button type="submit">Submit</button>
             </form>
-            <p id="feedback" style="display: none;">Correct Answer: V = IR</p>
+            <p id="feedback" style="display: none;">Correct Answer: The Force of Gravity</p>
         </div>
     </main>
     <a href="../jeopardy.html" class="button" onclick="returnToMain()">Return to Main Menu</a>
