--- a/questions/question8.html
+++ b/questions/question8.html
@@ -20,13 +20,13 @@
     </header>
     <main>
         <div class="question-container">
-            <p class="question-text">What is the SI unit of energy?</p>
+            <p class="question-text">What is the nickname for Newton's First Law</p>
             <form id="answer-form">
                 <label for="user-answer">Your Answer:</label>
                 <input type="text" id="user-answer" name="user-answer" required>
                 <button type="submit">Submit</button>
             </form>
-            <p id="feedback" style="display: none;">Correct Answer: Joule</p>
+            <p id="feedback" style="display: none;">Correct Answer: The law of Inertia</p>
         </div>
     </main>
     <a href="../jeopardy.html" class="button" onclick="returnToMain()">Return to Main Menu</a>
