--- a/games.html
+++ b/games.html
@@ -34,16 +34,11 @@
             <div class="game-grid">
                 <!-- Gravity Runner game card -->
                 <div class="game-card">
-                    <h3>Gravity Runner</h3>
-                    <p>Run and jump through obstacles while learning about gravity!</p>
+                    <h3>Matching!</h3>
+                    <p>Test your formula knowledge with a matching puzzle</p>
                     <a href="#" class="button">Play Now</a>
                 </div>
                 <!-- Energy Quiz game card -->
-                <div class="game-card">
-                    <h3>Energy Quiz</h3>
-                    <p>Test your knowledge about different forms of energy.</p>
-                    <a href="#" class="button">Start Quiz</a>
-                </div>
                 <!-- Physics Jeopardy game card -->
                 <div class="game-card">
                     <h3>Physics Jeopardy</h3>
@@ -51,11 +46,6 @@
                     <a href="jeopardy.html" target="_blank" class="button">Play Now</a>
                 </div>
                 <!-- Motion Master game card -->
-                <div class="game-card">
-                    <h3>Motion Master</h3>
-                    <p>Solve physics puzzles using Newton's laws of motion.</p>
-                    <a href="#" class="button">Play Now</a>
-                </div>
             </div>
         </section>
     </main>
