--- a/experiments.html
+++ b/experiments.html
@@ -34,51 +34,36 @@
             <div class="experiment-grid">
                 <!-- Paper Airplane experiment card -->
                 <div class="experiment-card">
-                    <h3>Paper Airplane Challenge</h3>
-                    <p>Learn about aerodynamics by designing and testing paper airplanes.</p>
+                    <h3>Bouncy Balls!</h3>
+                    <p>Learn about the Law of Universal Gravitation with Bouncy Balls</p>
                     <!-- List of required materials -->
                     <ul class="materials">
-                        <li>Paper</li>
-                        <li>Ruler</li>
-                        <li>Measuring tape</li>
+                        <li>Small Bouncy Ball</li>
+                        <li>Large Bouncy Bal</li>
+                        <li>Timer</li>
                     </ul>
                     <a href="#" class="button">View Instructions</a>
                 </div>
                 <!-- Homemade Battery experiment card -->
                 <div class="experiment-card">
-                    <h3>Homemade Battery</h3>
-                    <p>Create a simple battery using household materials.</p>
+                    <h3>Racecars!</h3>
+                    <p>See the effects of Newton's Laws on toy racecars</p>
                     <!-- List of required materials -->
                     <ul class="materials">
-                        <li>Copper coins</li>
-                        <li>Zinc washers</li>
-                        <li>Cardboard</li>
-                        <li>Vinegar</li>
+                        <li>Spring loaded racecar</li>
+                        <li>Ruler</li>
+                        <li>Meterstick (optional)</li>
                     </ul>
                     <a href="#" class="button">View Instructions</a>
                 </div>
                 <!-- Sound Wave experiment card -->
                 <div class="experiment-card">
-                    <h3>Sound Wave Visualizer</h3>
-                    <p>Visualize sound waves using a simple setup.</p>
+                    <h3>Bouyant force visualizer</h3>
+                    <p>See the force of water pressure in action on a test tube</p>
                     <!-- List of required materials -->
                     <ul class="materials">
-                        <li>Plastic cup</li>
-                        <li>Balloon</li>
-                        <li>Rubber band</li>
-                        <li>Small mirror</li>
-                    </ul>
-                    <a href="#" class="button">View Instructions</a>
-                </div>
-                <!-- Egg Drop experiment card -->
-                <div class="experiment-card">
-                    <h3>Egg Drop Challenge</h3>
-                    <p>Design a container to protect an egg from breaking when dropped.</p>
-                    <!-- List of required materials -->
-                    <ul class="materials">
-                        <li>Raw egg</li>
-                        <li>Various materials (straws, paper, tape)</li>
-                        <li>Scissors</li>
+                        <li>Water bottle</li>
+                        <li>Test Tube</li>
                     </ul>
                     <a href="#" class="button">View Instructions</a>
                 </div>
