--- a/games.html
+++ b/games.html
@@ -36,8 +36,8 @@
                 <div class="game-card">
                     <h3>Matching!</h3>
                     <p>Test your formula knowledge with a matching puzzle</p>
-                    <a href="#" class="button">Play Now</a>
-                </div>
+                    <a href="equation-matcher.html" target = "_blank" class="button">Play Now</a>
+                </div>  
                 <!-- Energy Quiz game card -->
                 <!-- Physics Jeopardy game card -->
                 <div class="game-card">
