touches on instructions

--- a/experiments.html
+++ b/experiments.html
@@ -42,7 +42,7 @@
                         <li>Large Bouncy Bal</li>
                         <li>Timer</li>
                     </ul>
-                    <a href="#" class="button">View Instructions</a>
+                    <p class="instructions-note">Instructions in experiment box</p>
                 </div>
                 <!-- Homemade Battery experiment card -->
                 <div class="experiment-card">
@@ -54,7 +54,7 @@
                         <li>Ruler</li>
                         <li>Meterstick (optional)</li>
                     </ul>
-                    <a href="#" class="button">View Instructions</a>
+                    <p class="instructions-note">Instructions in experiment box</p>
                 </div>
                 <!-- Sound Wave experiment card -->
                 <div class="experiment-card">
@@ -65,7 +65,7 @@
                         <li>Water bottle</li>
                         <li>Test Tube</li>
                     </ul>
-                    <a href="#" class="button">View Instructions</a>
+                    <p class="instructions-note">Instructions in experiment box</p>
                 </div>
             </div>
         </section>
@@ -77,4 +77,4 @@
         <a href="mailto:fvc9ch@virginia.edu" target="_blank">Contact Us!</a>
     </footer>
 </body>
-</html> 
+</html>
