--- a/questions/question25.html
+++ b/questions/question25.html
@@ -20,7 +20,7 @@
     </header>
     <main>
         <div class="question-container">
-            <p class="question-text">What happens to sound in space where there's no air?</p>
+            <p class="question-text">What happens to light when it goes through water?</p>
             <form id="answer-form">
                 <label for="user-answer">Your Answer:</label>
                 <input type="text" id="user-answer" name="user-answer" required>
