--- a/energy.html
+++ b/energy.html
@@ -32,13 +32,31 @@
             <h2>Supplemental Videos: Energy and Work</h2>
         </section>
 
-        <section id="force">            
-            <ul>
-                <li><a href="https://www.youtube.com/watch?v=Q0LBegPWzrg" target="_blank">Energy Animation Video</a></li>
-                <li><a href="https://www.youtube.com/watch?v=rkZZjM6Oiw8" target="_blank">What is Energy?</a></li>
-                <li><a href="https://www.youtube.com/watch?v=St2q6oGO6xo" target="_blank">Kinetic and Potential Energy Song</a></li>
-            </ul>
+    <!-- ENERGY.HTML UPDATED -->
+    <!-- Replace the <ul> section in energy.html -->
+        <section id="force">
+            <div class="lesson-grid">
+                <div class="lesson-card">
+                    <a href="https://www.youtube.com/watch?v=Q0LBegPWzrg" target="_blank" class="video-link">
+                        <img src="https://img.youtube.com/vi/Q0LBegPWzrg/hqdefault.jpg" alt="Energy Animation Video">
+                        <h3>Energy Animation Video</h3>
+                    </a>
+                </div>
+                <div class="lesson-card">
+                    <a href="https://www.youtube.com/watch?v=rkZZjM6Oiw8" target="_blank" class="video-link">
+                        <img src="https://img.youtube.com/vi/rkZZjM6Oiw8/hqdefault.jpg" alt="What is Energy?">
+                        <h3>What is Energy?</h3>
+                    </a>
+                </div>
+                <div class="lesson-card">
+                    <a href="https://www.youtube.com/watch?v=St2q6oGO6xo" target="_blank" class="video-link">
+                        <img src="https://img.youtube.com/vi/St2q6oGO6xo/hqdefault.jpg" alt="Kinetic and Potential Energy Song">
+                        <h3>Kinetic and Potential Energy Song</h3>
+                    </a>
+                </div>
+            </div>
         </section>
+        
       
  
     <!-- Footer with copyright and contact information -->
