--- a/experiments.html
+++ b/experiments.html
@@ -34,6 +34,7 @@
             <div class="experiment-grid">
                 <!-- Paper Airplane experiment card -->
                 <div class="experiment-card">
+                    <img src="imgs/bouncy_ball_experiment.jpg" alt="Bouncy Ball Experiment" class="experiment-image" style="max-width: 100%; height: auto;">
                     <h3>Bouncy Balls!</h3>
                     <p>Learn about the Law of Universal Gravitation with Bouncy Balls</p>
                     <!-- List of required materials -->
@@ -46,7 +47,8 @@
                 </div>
                 <!-- Homemade Battery experiment card -->
                 <div class="experiment-card">
-                    <h3>Racecars!</h3>
+                    <img src="imgs/race_car_experiment.jpg" alt="Race Cars Experiment" class="experiment-image" style="max-width: 100%; height: auto;">
+                    <h3>Race cars!</h3>
                     <p>See the effects of Newton's Laws on toy racecars</p>
                     <!-- List of required materials -->
                     <ul class="materials">
@@ -58,13 +60,16 @@
                 </div>
                 <!-- Sound Wave experiment card -->
                 <div class="experiment-card">
+                    <img src="imgs/buoyancy_experiment_img.jpg" alt="Buoyancy experiment" class="experiment-image" style="max-width: 100%; height: auto;">
                     <h3>Bouyant force visualizer</h3>
                     <p>See the force of water pressure in action on a test tube</p>
                     <!-- List of required materials -->
                     <ul class="materials">
                         <li>Water bottle</li>
-                        <li>Test Tube</li>
+                        <li>Paperclip</li>
+                        <li>Straw</li>
                     </ul>
+                    <img src="imgs/buoyancy_instructions.png" alt="Buoyancy instructions" class="experiment-image" style="max-width: 100%; height: auto;">
                     <p class="instructions-note">Instructions in experiment box</p>
                 </div>
             </div>
