--- a/forces.html
+++ b/forces.html
@@ -31,15 +31,34 @@
         <section id="home">
             <h2>Supplemental Videos: Forces and Motion</h2>
         </section>
+<!-- Updated forces.html and energy.html to show YouTube cards -->
 
-        <section id="force">            
-            <ul>
-                <li><a href="https://www.youtube.com/watch?v=JGO_zDWmkvk" target="_blank">TED-Ed: Newton's Laws</a></li>
-                <li><a href="https://www.youtube.com/watch?v=IjXv3sh4f4I" target="_blank">Demo Video</a></li>
-                <li><a href="https://www.youtube.com/watch?v=yUp4W9htmuY" target="_blank">Newton's Laws Song</a></li>
-            </ul>
-        </section>
-      
+<!-- FORCES.HTML UPDATED -->
+<!-- Replace the <ul> section in forces.html -->
+    <section id="force">
+        <div class="lesson-grid">
+            <div class="lesson-card">
+                <a href="https://www.youtube.com/watch?v=JGO_zDWmkvk" target="_blank" class="video-link">
+                    <img src="https://img.youtube.com/vi/JGO_zDWmkvk/hqdefault.jpg" alt="TED-Ed Newton's Laws">
+                    <h3>TED-Ed: Newton's Laws</h3>
+                </a>
+            </div>
+            <div class="lesson-card">
+                <a href="https://www.youtube.com/watch?v=IjXv3sh4f4I" target="_blank" class="video-link">
+                    <img src="https://img.youtube.com/vi/IjXv3sh4f4I/hqdefault.jpg" alt="Demo Video">
+                    <h3>Demo Video</h3>
+                </a>
+            </div>
+            <div class="lesson-card">
+                <a href="https://www.youtube.com/watch?v=yUp4W9htmuY" target="_blank" class="video-link">
+                    <img src="https://img.youtube.com/vi/yUp4W9htmuY/hqdefault.jpg" alt="Newton's Laws Song">
+                    <h3>Newton's Laws Song</h3>
+                </a>
+            </div>
+        </div>
+    </section>
+    
+
  
     <!-- Footer with copyright and contact information -->
     <footer>
