--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
 
     <!-- New Dora the Explorer section -->
     <section id="dora">
-        <h2>Explore with Dora!</h2>
-        <img src="imgs/DoraTheExplorer.png" alt="Dora the Explorer swinging with Boots" style="max-width: 100%; height: auto;">
-        <p>Join Dora and Boots on an exciting journey to learn physics concepts in a fun and interactive way!</p>
+        <h2>Explore a Distant Forest!</h2>
+        <p>Make your way through an exciting forest as you solve physics problems and learn important concepts to our everyday lives. </p>
     </section>
     
         <!-- Lessons preview section -->
@@ -57,7 +56,7 @@
         <!-- Experiments preview section -->
         <section id="experiments">
             <h2>Hands-on Experiments</h2>
-            <p>Try these simple and safe experiments in the classroom!</p>
+            <p>Try these simple and safe experiments in the classroom using our provided experiment boxes!</p>
             <a href="experiments.html" class="button">View Experiments</a>
         </section>
     </main>
