--- a/jeopardy.html
+++ b/jeopardy.html
@@ -18,11 +18,11 @@
     </header>
     <main>
         <div class="jeopardy-grid">
-            <div class="category">Category 1</div>
-            <div class="category">Category 2</div>
-            <div class="category">Category 3</div>
-            <div class="category">Category 4</div>
-            <div class="category">Category 5</div>
+            <div class="category">Motion</div>
+            <div class="category">Forces</div>
+            <div class="category">Newton's Laws</div>
+            <div class="category">Energy</div>
+            <div class="category">Waves</div>
             <a href="questions/question1.html"><div class="square" id="square1">$100</div></a>
             <a href="questions/question2.html"><div class="square" id="square2">$100</div></a>
             <a href="questions/question3.html"><div class="square" id="square3">$100</div></a>
